add initial porting of data masking to spark with the "new" configuration style
Signed-off-by: Stefano Braghin <527806+stefano81@users.noreply.github.com>